<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">
        <EditText
            android:id="@+id/et_userId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/str_user_id"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:hint="@string/str_title_post"/>
        <EditText
            android:id="@+id/et_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:hint="@string/str_post"/>
        <Button
            android:id="@+id/btn_submitCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_create_post"
            android:enabled="false"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>